<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_marginStart="32dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="20dp">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dialog_horizontal_padding"
        android:paddingTop="@dimen/dialog_vertical_padding"
        android:paddingEnd="@dimen/dialog_horizontal_padding"
        android:paddingBottom="@dimen/dialog_vertical_padding">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/add_new_sensor_dialog_title"
            android:textAlignment="center"
            android:textColor="@color/colorDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/dialog_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/add_new_sensor_dialog_hint"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

        <EditText
            android:id="@+id/name_edit_text"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/add_new_sensor_dialog_hint_name"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColorLink="@color/colorAccent"
            android:textIsSelectable="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_description"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/mac_edit_text"
            style="@style/CustomEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/add_new_sensor_dialog_hint_mac"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:maxLength="17"
            android:singleLine="true"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
            tools:ignore="Autofill" />


        <TextView
            android:id="@+id/scan_button"
            style="@style/CustomDialogButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/qr_code_no_scan"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_button" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_accent_bg"
            android:text="@string/next_button"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_hint" />

        <TextView
            android:id="@+id/error_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mac_edit_text" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sensor_no_exist_logo" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>